fixed: layout bugs

--- a/src/apps/properties/src/components/WebsiteInvite/WebsiteInvite.less
+++ b/src/apps/properties/src/components/WebsiteInvite/WebsiteInvite.less
@@ -26,22 +26,33 @@
     }
   }
   main {
+    border-bottom: 1px solid #9ba4b5;
     padding: 1rem;
-    padding-bottom: 0;
     flex: 1;
-    a {
-      margin: 0;
-    }
-    .globe {
+    // a {
+    //   margin: 0;
+    // }
+    // .globe {
+    //   font-size: 10rem;
+    //   color: #f3f3f7;
+    //   text-align: center;
+    //   width: 100%;
+    // }
+    .preview {
+      display: flex;
+      align-items: center;
       font-size: 10rem;
+      justify-content: center;
+      // color: #cacad4;
       color: #f3f3f7;
-      text-align: center;
-      width: 100%;
+      &:hover {
+        color: @zesty-orange;
+      }
     }
   }
   footer {
     padding: 1rem;
-    padding-top: 0;
+    // padding-top: 0;
 
     .invite {
       width: 100%;
